@@ -21,15 +21,15 @@ body {
 
 #box {
 	position:relative;
-	width:978px;
+	width:1234px;
 	padding-top:100px;
 	margin:0 auto;
 	text-align:left; }
 
 #contentBox {
 	position:relative;
-	width:973px !important;
-	width:978px;
+	width:1229px !important;
+	width:1234px;
 	min-height:415px;
 	height:auto !important;
 	height:415px;
@@ -38,7 +38,7 @@ body {
 #contentBoxTop {
 	position:absolute;
 	height:85px;
-	width:978px;
+	width:1234px;
 	margin:-1px -2px 0 -3px; }
 
 #main {
@@ -61,7 +61,7 @@ body {
 	position:relative;
 	top:46px;
 	float:left;
-	width:680px;
+	width:936px;
 	-moz-border-radius:0 10px 10px 10px;
 	-webkit-border-radius:0 10px 10px 10px;
 	border-radius:0 10px 10px 10px; }
@@ -131,13 +131,13 @@ body {
 	padding-top:20px;
 
 	.inner {
-		width:950px;
+		width:1206px;
 		margin:0 auto; }
 }
 
 #footer-info {
 	float:left;
-	width:400px; }
+	width:528px; }
 
 #footer-logo {
 	float:left;
@@ -146,7 +146,7 @@ body {
 
 #footer-address {
 	float:right;
-	width:400px;
+	width:528px;
 	text-align:right; }
 
 #footer-line {
