@@ -11,7 +11,7 @@
 
 #navi-main-list {
 	margin:0 auto;
-	width:978px;
+	width:1237px;
 
 	li {
 		float:left;
