@@ -1,6 +1,6 @@
 #toppanel {
 	position:relative;
-	width:978px;
+	width:1236px;
 	margin:0 auto;
 	height:70px;
 	background:transparent;
@@ -16,7 +16,7 @@
 #head {
 	position:absolute;
 	left:198px;
-	width:765px;
+	width:1023px;
 	height:68px;
 	background:url(../img/bg-header.png) no-repeat 0 0;
 }
